--- a/food-login.html
+++ b/food-login.html
@@ -28,7 +28,7 @@
 
         <a href="#" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="">SignUp</a></li>
+          <li><a href="">Sign Up</a></li>
           
         </ul>
       </div>
@@ -40,9 +40,12 @@
           <div id="h2-div">
             <div class="col m6 offset-3 center">            
               <h1 class="simple">Step 1: Choose your Food!</h1>
-              <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+              <br> <br> <br>
               <!-- Here we will add a modal and load the javascript logic for eatsreet api login -->
-              <a class="waves-effect waves-light btn green" href="">Eat Street login&rarr;</a> 
+              <a class="waves-effect waves-light btn btn-large green lighten-1" href="">Eat Street login&rarr;</a> 
+              <br>
+              <br>
+              <a class="waves-effect waves-light btn pink lighten-2" href="">Sign up</a> 
               
       </div>
     </div>
