--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="h1-div">          
 		          <h1>Get The Party Started.</h1>
               <br>
-              <a class="waves-effect waves-light btn pink lighten-4" href="">Browse Services&rarr;</a>
+              <a class="waves-effect waves-light btn btn-large pink lighten-4" href="">Browse Services&rarr;</a>
             </div>
 		      </div>
       </div>
