--- a/food-login.html
+++ b/food-login.html
@@ -39,7 +39,7 @@
         <div class="col m3"></div>
           <div id="h2-div">
             <div class="col m6 offset-3 center">            
-              <h1 class="simple">Step 1: Choose your Food!</h1>
+              <h1 class="simple">Step 1: Order Your Food!</h1>
               <br> <br> <br>
               <!-- Here we will add a modal and load the javascript logic for eatsreet api login -->
               <a class="waves-effect waves-light btn btn-large green lighten-1" href="">Eat Street login&rarr;</a> 
