--- a/food-login.html
+++ b/food-login.html
@@ -4,7 +4,6 @@
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
       <link rel="stylesheet" href="assets/css/style.css">
 
@@ -21,7 +20,6 @@
     <body>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
     
     <nav>
     <div class="nav-wrapper grey darken-3">
@@ -42,13 +40,13 @@
               <h1 class="simple">Step 1: Order Your Food!</h1>
               <br> <br> <br>
               <!-- Here we will add a modal and load the javascript logic for eatsreet api login -->
-              <a class="waves-effect waves-light btn btn-large green lighten-1" href="">Eat Street login&rarr;</a> 
+              <a class="waves-effect waves-light btn btn-large green lighten-1" href="" id="eatstreetlogin">Eat Street login&rarr;</a> 
               <br>
               <br>
               <a class="waves-effect waves-light btn pink lighten-2" href="">Sign up</a> 
               
       </div>
     </div>
-
+  <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
   </html>
