login and signup

--- a/food-login.html
+++ b/food-login.html
@@ -40,10 +40,10 @@
               <h1 class="simple">Step 1: Order Your Food!</h1>
               <br> <br> <br>
               <!-- Here we will add a modal and load the javascript logic for eatsreet api login -->
-              <a class="waves-effect waves-light btn btn-large green lighten-1" href="" id="eatstreetlogin">Eat Street login&rarr;</a> 
+              <button class="waves-effect waves-light btn btn-large green lighten-1" id="eatstreetlogin">Eat Street login&rarr;</button> 
               <br>
               <br>
-              <a class="waves-effect waves-light btn pink lighten-2" href="">Sign up</a> 
+              <button class="waves-effect waves-light btn pink lighten-2" id="eatstreetsignup">Sign up</button> 
               
       </div>
     </div>
