--- a/redirect-food-login.html
+++ b/redirect-food-login.html
@@ -28,11 +28,7 @@
     <nav>
     <div class="nav-wrapper grey darken-3">
 
-        <a href="#" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="">SignUp</a></li>
-          
-        </ul>
+        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>
       </div>
   </nav>
 
@@ -56,8 +52,8 @@
 
             <div class="card-image">
 
-              <img src="assets/images/seafood.png">
-              <span class="card-title">Seafood</span>
+              <img src="assets/images/lunch.jpg">
+              <span class="card-title">Lunch</span>
 
             </div>
 
@@ -90,8 +86,8 @@
 
             <div class="card-image">
 
-              <img src="assets/images/seafood.png">
-              <span class="card-title">Seafood</span>
+              <img src="assets/images/dinner.jpg">
+              <span class="card-title">Dinner</span>
 
             </div>
 
@@ -126,8 +122,8 @@
 
             <div class="card-image">
 
-              <img src="assets/images/seafood.png">
-              <span class="card-title">Seafood</span>
+              <img src="assets/images/Pizza.jpeg">
+              <span class="card-title">Pizza</span>
 
             </div>
 
@@ -161,8 +157,8 @@
 
             <div class="card-image">
 
-              <img src="assets/images/seafood.png">
-              <span class="card-title">Seafood</span>
+              <img src="assets/images/italian.jpg">
+              <span class="card-title">Italian</span>
 
             </div>
 
