--- a/redirect-food-login.html
+++ b/redirect-food-login.html
@@ -28,11 +28,8 @@
     <nav>
     <div class="nav-wrapper grey darken-3">
 
-        <a href="#" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="">SignUp</a></li>
-          
-        </ul>
+        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>
+        
       </div>
   </nav>
 
