--- a/redirect-food-login.html
+++ b/redirect-food-login.html
@@ -25,23 +25,22 @@
 
     <div class="row">
       <div class="col m3"></div>
-        <div id="h3-div">
+        
           <div class="col m6 offset-3 center">            
             <h1 class="simple">Step 1: Select Your Taco!</h1>
             <h5><i>What are you craving?</i></h5>
             <br> <br>
-            <button id="taco-btn" class="modal-action modal-close waves-effect waves-green btn pink">Random Taco Generator!</a>
-        </div>               
+            <button id="taco-btn" class="modal-action modal-close waves-effect waves-green btn pink">Random Taco Generator!</button>
+                      
       </div>
-    </div>
-  </div>
+    </div> 
   
   
-
-  <div id="taco-container">
+   <div id="taco-container"> 
     <div class="row">
       <div class="s12 m8 l6 center-align">
-        <!-- display random taco here -->
+        <!-- append random taco here -->
+        <h4><u>hello world.</u></h4>
       </div>
     </div>
   </div>     
