randomtaco working still needs to save in firebase

--- a/steptwo.html
+++ b/steptwo.html
@@ -39,10 +39,10 @@
     <div class="nav-wrapper nav-wrapper2">
       <form>
         <div class="input-field pink lighten-4">
-          <input id="music-search" type="search" required>
-          <label for="music-search">e.g Rock, Hip Hop, Paramore, The Smiths</label>
+          <input id="music-search" type="search"  required>
+          <label for="music-search" class="white-text">e.g Rock, Hip Hop, Paramore, The Smiths</label>
           <!-- I've put "red-text" class to emphasize -->
-          <i class="material-icons grey-text">close</i>
+          <i class="material-icons white-text">close</i>
         </div>
       </form>
     </div>
@@ -52,16 +52,16 @@
         <div class="s12 m12 l12">
         <div class="collection">
         <!-- Just an example, need to append this div with the buttons below and grab the value of the button they choose -->
-          <a href="#!" class="collection-item">The Smiths - Heaven Knows Im Miserable Now</a>
+          <a href="#!" class="collection-item teal lighten-3 white-text">The Smiths - Heaven Knows Im Miserable Now</a>
           <a href="#!" class="collection-item">The Sounds - Crossing The Rubicon</a>
-          <a href="#!" class="collection-item">Paramore - All We Know Is Falling</a>
+          <a href="#!" class="collection-item teal lighten-3 white-text">Paramore - All We Know Is Falling</a>
           <a href="#!" class="collection-item">The Pixies - Where is My Mind</a>
-          <a href="#!" class="collection-item">Testing - Testing</a>
+          <a href="#!" class="collection-item teal lighten-3 white-text">Testing - Testing</a>
         </div>
         </div>
           <ul class="pagination center-align">
     <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-    <li class="active pink"><a href="#!">1</a></li>
+    <li class="active pink lighten-4"><a href="#!">1</a></li>
     <li class="waves-effect"><a href="#!">2</a></li>
     <li class="waves-effect"><a href="#!">3</a></li>
     <li class="waves-effect"><a href="#!">4</a></li>
