--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="assets/css/materialize.min.css">
               
     </head>
-    
+
     <body> 
 
     <nav>
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col s12 m12 l12 center-align">
-          <button class="waves-effect waves-light btn btn-large green lighten-1 modal-trigger" data-target="modal1" href="">Login&rarr;</a> </button>
+          <button class="waves-effect waves-light btn btn-large teal lighten-2 modal-trigger" data-target="modal1" href="">Login&rarr;</a> </button>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
   <div class="container">
     <div class="row">
       <div class="col s12 m12 l12 center-align">
-        <button class="waves-effect waves-light btn btn red lighten-2 modal-trigger" data-target="modal2" href="">Signup</a> </button>
+        <button class="waves-effect waves-light btn btn pink lighten-2 modal-trigger" data-target="modal2" href="">Signup</a> </button>
       </div>
     </div>
   </div>
