--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
 
     <nav>
 	    <div class="nav-wrapper pink">
-	      <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>	        
+	      <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <div class="container">
+      <div class="row">
+        <div class="col s12 m12 l12 center-align">
+          <button class="btn-flat modal-trigger" data-target="modal1">About</a> </button>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal modal-fixed-footer">
+      We are sfjnasdfkjnaskdfnsdf
+    </div></li>	        
+ 
 	     </div>
   </nav>
 
