--- a/itemized.html
+++ b/itemized.html
@@ -17,21 +17,41 @@
     <div id="banner-container5">   
     <div class="navbar-fixed transparent">  
     <nav class="transparent">
-    <div class="nav-wrapper transparent">
-        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>        
+    <div class="nav-wrapper transparent ">
+        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
+        <div class="row">
+        <div class="col s4 m12 l12 align center">
+          <font size="6px"><b>Dashboard</b></font>
+        </div>
+        </div>
     </div>
     </nav>
     </div>
 
+  <div id = "create-party">
+    <div class="row">
+      <div class="col s6 m4 l2">
+        <div class="card">
+          <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Create A Party!</span>
+          <a href="#"><i class="material-icons"><font size="10px">playlist_add</font></i></a>
+        </div>
+      </div>
+    </div>  
+  </div>
 
-    <div class="row center">
-          <div class="col m3"></div>
-          <div class="col m6 offset-3 center">            
-           </div>
-            </div>
-          </div>
-        
   
+    <div class = "row">
+      <div class = "col s6 m4 l2">
+        <h4>History</h4> 
+        <div id = "party-history">
+        <!-- load past parties here -->
+        </div>
+      </div>
+    </div>
+
+
+
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/js/materialize.min.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
