--- a/steptwo.html
+++ b/steptwo.html
@@ -71,7 +71,7 @@
       </div>
     </div>
       
-  
+  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/js/materialize.min.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
