--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col s12 m12 l12 center-align">
-                    <button class="waves-effect waves-light btn btn-large teal lighten-2 modal-trigger" data-target="modal1" href="">Login&rarr;</a> </button>
+                    <button class="waves-effect waves-light btn btn-large teal lighten-2" id="login-btn" href="">Login&rarr;</a> </button>
                   </div>
                 </div>
               </div>
@@ -148,17 +148,24 @@
           </div>
         </footer>
 
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-messaging.js"></script>
+    
+    
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-    <script>
-    var config = {
-    // ...
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAgF9voixde5OVjEWFYl9NYqvcs03hc9lE",
+    authDomain: "parti-4f1cd.firebaseapp.com",
+    databaseURL: "https://parti-4f1cd.firebaseio.com",
+    projectId: "parti-4f1cd",
+    storageBucket: "parti-4f1cd.appspot.com",
+    messagingSenderId: "497132530159"
   };
   firebase.initializeApp(config);
-  </script>
+</script>
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
