live testing login

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col s12 m12 l12 center-align">
-                    <button class="waves-effect waves-light btn btn-large teal lighten-2" id="login-btn" href="">Login&rarr;</a> </button>
+                    <button id="login-btn" href="">Login&rarr;</a> </button>
                   </div>
                 </div>
               </div>
