--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
       <!--Import materialize.css-->     
       <link rel="stylesheet" href="assets/css/materialize.min.css">
+      <meta name="google-signin-client_id" content="615910362273-9ackk80rrajdaqos4sqlpbrmg8vcr0mb.apps.googleusercontent.com">
               
     </head>
 
@@ -47,7 +48,7 @@
               <br>
               <div class="row">      
               <div class="col s12 m12 l12 center-align">
-                <button class="waves-effect waves-light btn btn-large pink lighten-2" id="login-btn">Login with Google&rarr;</a> </button>
+                <button class="waves-effect waves-light btn btn-large pink lighten-2 g-signin2" id="login-btn" data-onsuccess="onSignIn">Login with Google&rarr;</a> </button>
               </div>
               </div>
             </div>         
