--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
     messagingSenderId: "497132530159"
   };
   firebase.initializeApp(config);
+
+  if(user) {
+  window.location.href = "http://anthonyponcex.github.com/dashboard";
+}
+
 </script>
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -86,5 +91,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
+    
+
   </body>
   </html>
