--- a/stepone.html
+++ b/stepone.html
@@ -19,7 +19,9 @@
     <div class="navbar-fixed transparent">  
     <nav class="transparent">
     <div class="nav-wrapper transparent">
-        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>        
+        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
+         <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#" onclick="signOut();">Sign out</a></li>       
     </div>
     </nav>
     </div>
