--- a/dashboard.html
+++ b/dashboard.html
@@ -19,11 +19,8 @@
     <nav class="transparent">
     <div class="nav-wrapper transparent ">
         <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
-        <div class="row">
-        <div class="col s4 m12 l12 align center">
-          
-        </div>
-        </div>
+         <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#" onclick="signOut();">Sign out</a></li>
     </div>
     </nav>
     </div>
