--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <br>
               <div class="row">      
               <div class="col s12 m12 l12 center-align">
-                <button class="waves-effect waves-light btn btn-large pink lighten-2 g-signin2" id="login-btn" data-onsuccess="onSignIn">Login with Google&rarr;</a> </button>
+                <button class="g-signin2" data-onsuccess="onSignIn">Login with Google&rarr;</button>
               </div>
               </div>
             </div>         
