--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
   };
   firebase.initializeApp(config);
 
+firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+    // Handle Errors here.
+    var errorCode = error.code;
+    console.log(error.Message);
+
+});
+
+firebase.auth().onAuthStateChanged(function(user) {
+  if (user) {
+    // User is signed in.
+    window.location.href = 'dashboard.html';
+  } else {
+    // No user is signed in.
+  }
+});
 
 </script>
 
