--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
+  <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+  </script>
 
       <link rel="stylesheet" href="assets/css/style.css">
       <!--Let browser know website is optimized for mobile-->
