--- a/itemized.html
+++ b/itemized.html
@@ -14,41 +14,23 @@
 
     <body>
 
-    <div id="banner-container5">   
+    <div id="banner-container6">   
     <div class="navbar-fixed transparent">  
     <nav class="transparent">
     <div class="nav-wrapper transparent ">
         <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
+         <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#" onclick="signOut();">Sign out</a></li>        
         <div class="row">
         <div class="col s4 m12 l12 align center">
-          <font size="6px"><b>Dashboard</b></font>
+          <font size="6px"><b>Itinerary</b></font>
         </div>
         </div>
     </div>
     </nav>
     </div>
 
-  <div id = "create-party">
-    <div class="row">
-      <div class="col s6 m4 l2">
-        <div class="card">
-          <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Create A Party!</span>
-          <a href="#"><i class="material-icons"><font size="10px">playlist_add</font></i></a>
-        </div>
-      </div>
-    </div>  
-  </div>
-
-  
-    <div class = "row">
-      <div class = "col s6 m4 l2">
-        <h4>History</h4> 
-        <div id = "party-history">
-        <!-- load past parties here -->
-        </div>
-      </div>
-    </div>
+ 
 
 
 
