--- a/dashboard.html
+++ b/dashboard.html
@@ -20,23 +20,31 @@
     <div class="nav-wrapper transparent ">
         <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
          <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#" onclick="signOut();">Sign out</a></li>
+        <li><a href="#" onclick="signOut();">Sign out</a></li>       
+        <div class="row">
+        <div class="col s4 m12 l12 align center">
+          <font size="6px"><b>Dashboard</b></font>
+        </div>
+        </div>
     </div>
     </nav>
     </div>
 
   <div id = "create-party">
     <div class="row">
-      <div class="col s12 m12 l12 align center">
-      <a href="#"><i class="material-icons"><h3>playlist_add</h3></i> </a> Create A Party
-         
+      <div class="col s6 m4 l2">
+        <div class="card">
+          <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Create A Party!</span>
+          <a href="#"><i class="material-icons"><font size="10px">playlist_add</font></i></a>
         </div>
       </div>
     </div>  
   </div>
 
   
-    <div class = "row white-text align center">
+    <div class = "row">
+      <div class = "col s6 m4 l2">
         <h4>History</h4> 
         <div id = "party-history">
         <!-- load past parties here -->
@@ -45,7 +53,7 @@
     </div>
 
 
-  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/js/materialize.min.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
