--- a/step1.html
+++ b/step1.html
@@ -21,7 +21,7 @@
     <div class="nav-wrapper transparent">
         <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
          <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#" onclick="signOut();">Sign out</a></li>       
+        <li><button class="waves-effect waves-green btn pink lighten-2"><a href="step2.html">Step 2&rarr;</a></button></li>       
     </div>
     </nav>
     </div>
@@ -35,7 +35,7 @@
             <h5><i>What are you craving?</i></h5>
             <br> <br>
             <button id="taco-btn" class="waves-effect waves-green btn pink lighten-2">Random Taco Generator!</button>
-            <p class="grey-text">Select 1 Random Taco Recipe</p>         
+            <p class="grey-text">Select 1 Random Taco Recipe</p>      
       </div>
     </div> 
   
