--- a/step2.html
+++ b/step2.html
@@ -20,7 +20,7 @@
     <div class="nav-wrapper transparent">
        <a href="index.html" class="brand-logo"><img id="logo" src="assets/images/Parti_logo.png" ></a>  
          <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#" onclick="signOut();">Sign out</a></li>  
+        <li><button class="waves-effect waves-green btn pink lighten-2"><a href="step3.html">Step 3&rarr;</a></button></li>  
     </div>
     </nav>
     </div>
