--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Modal Structure -->
             <div id="modal3" class="modal teal lighten-2-text modal-fixed-footer">
               <div class="modal-content">
-           ksdnfklansdf
+           
            </div>
            </div>
  
@@ -52,7 +52,7 @@
               <br>
               <div class="row">      
               <div class="col s12 m12 l12 center-align">
-                <button class="g-signin2" data-onsuccess="onSignIn" onclick="location.href='stepone.html';">Start the Party&rarr;</button>
+                <button class="waves-effect waves-green btn pink lighten-2"><a href="step1.html">Start the Party&rarr;</a></button>
               </div>
               </div>
             </div>         
